linked-viz/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkerd-ingress
  namespace: linkerd-viz
  annotations:
    kubernetes.io/ingress.class: public
spec:
  rules:
  - host: linkerd.cgrpi.ml
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 8084
